--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.8'
 
 services:
-
   mysql_server:
     image: mariadb:latest
     restart: always
+    container_name: dbcoffeemug
     env_file:
       - .env
     environment:
@@ -13,15 +13,18 @@ services:
     ports:
       - '3306:3306'
     networks:
-      - default
+      - mynet
 
   app:
     build:
       context: .
-      dockerfile: Dockerfile
     ports:
       - '8080:8080'
-    volumes:
-      - .:/app
+    networks:
+      - mynet
     depends_on:
       - mysql_server
+
+networks:
+  mynet:
+    driver: bridge
